--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
+  background: #136a8a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #267871, #136a8a);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #267871, #136a8a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+ }
+ h1
+ {
+
+  font-weight:200;
+   font-family: 'Sega'; /* custom font */
+   color:white;
+   letter-spacing:1px;
+   font-size:4.5rem;
+  }
+
+
